Fix subscribe widget on small screens

--- a/sass/_widgets.scss
+++ b/sass/_widgets.scss
@@ -27,8 +27,21 @@
 		line-height: 1;
 		height: 56px;
 	}
+
 	input[type="submit"] {
 		border-radius: 0 3px 3px 0;
+	}
+	
+	@media ( max-width: 400px ) {
+		#subscribe-email input,
+		input[type="submit"] {
+			display: block;
+			width: 100%;
+			border-radius: 3px 3px 0 0;
+		}
+		input[type="submit"] {
+			border-radius: 0 0 3px 3px;
+		}
 	}
 }
 
