--- a/style.css
+++ b/style.css
@@ -292,6 +292,15 @@ a.cta-button {
 .jetpack_subscription_widget input[type="submit"] {
   border-radius: 0 3px 3px 0; }
 
+@media (max-width: 400px) {
+  .jetpack_subscription_widget #subscribe-email input,
+  .jetpack_subscription_widget input[type="submit"] {
+    display: block;
+    width: 100%;
+    border-radius: 3px 3px 0 0; }
+  .jetpack_subscription_widget input[type="submit"] {
+    border-radius: 0 0 3px 3px; } }
+
 #after-header-widgets {
   font-family: "Roboto Slab";
   margin: -100px auto 0;
